# CS116-2017-jonathan-haab-cppcourse-brunel

./: Doxyfile.in  README.md
Neurons_make/: CMakeLists.txt  READ_ME.txt  constants.hpp  network.cpp  neuron.cpp  neuron.hpp
Neurons_make/html/: annotated.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  index.html  network_8cpp.html  network_8hpp.html  network_8hpp_source.html  neuron_8cpp.html  neuron_8hpp.html  neuron_8hpp_source.html  neuron__unittest_8cpp.html  neuron_main_8cpp.html  pages.html  test.html
Neurons_make/html/search/: all_1.js  all_2.js  all_3.js  all_6.js  enums_0.js  enums_1.js  files_0.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
Neurons_make/latex/: class_network.tex  class_neuron.tex  files.tex  network_8cpp.tex  network_8hpp.tex  neuron_8cpp.tex  neuron_8hpp.tex  neuron__unittest_8cpp.tex  neuron_main_8cpp.tex  refman.tex  test.tex
Plots/: PlotB.txt  PlotC.txt  PlotD.txt
src/: constants.hpp  network.cpp  network.hpp  neuron.cpp  neuronMain.cpp
test/: neuron_unittest.cpp
